load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "idempotencyv1",
    srcs = ["idempotency.go"],
    importpath = "github.com/fjarm/fjarm/api/pkg/fjarm/idempotency/idempotencyv1",
    visibility = ["//visibility:public"],
)

go_test(
    name = "idempotencyv1_test",
    srcs = ["idempotency_key_test.go"],
    embed = [":idempotencyv1"],
    deps = [
        "@build_buf_gen_go_fjarm_fjarm_protocolbuffers_go//fjarm/idempotency/v1:idempotency",
        "@build_buf_go_protovalidate//:protovalidate",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
