load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "idempotency",
    srcs = ["idempotency.go"],
    importpath = "github.com/fjarm/fjarm/api/pkg/fjarm/idempotency/v1",
    visibility = ["//visibility:public"],
)

go_test(
    name = "idempotency_test",
    srcs = ["idempotency_key_test.go"],
    embed = [":idempotency"],
    deps = [
        "@build_buf_gen_go_fjarm_fjarm_protocolbuffers_go//fjarm/idempotency/v1:idempotency",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
